[package]
name = "bgm-birth"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
clap = { version = "4.5.17", features = ["derive"] }
futures = "0.3.30"
reqwest = { version = "0.12.7", features = ["json"] }
scraper = "0.20.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tl = "0.7.8"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }

[profile.release]
debug = true
